# email-triage-openenv

./: Dockerfile  README.md  SUBMISSION_CHECKLIST.md  inference.py  pyproject.toml  requirements.txt
email_triage_env/: __init__.py  client.py  grader.py  models.py  tasks.py
server/: __init__.py  app.py  email_triage_environment.py
